[package]
name = "opencells-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
cgmath = "0.18.0"
glutin = "0.27.0"
luminance = "0.44.0"
luminance-derive = "0.7.0"
luminance-front = "0.4.0"
luminance-glutin = "0.12.0"
luminance-glyph = { git = "https://github.com/paavohuhtala/luminance-glyph", branch = "luminance-0.44" }
luminance-windowing = "0.10.0"
num-traits = "0.2.14"
rand = "0.8.4"
rayon = "1.5.1"
